[package]
name = 'thc-node'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
build = 'build.rs'

[[bin]]
name = 'thc-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

thc-runtime = { version = '4.0.0-dev', path = '../runtime' }
node-primitives = { version = '1.0.0', path = '../primitives' }

frame-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
frame-benchmarking-cli = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
pallet-contracts-rpc = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
pallet-transaction-payment-rpc = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-basic-authorship = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-cli = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', features = ['wasmtime'] }
sc-client-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-aura = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-executor = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', features = ['wasmtime'] }
sc-finality-grandpa = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-keystore = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-rpc = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-rpc-api = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-service = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', features = ['wasmtime'] }
sc-telemetry = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-transaction-pool = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-transaction-pool-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-block-builder = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-blockchain = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-consensus = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-consensus-aura = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-core = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-finality-grandpa = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-runtime = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-timestamp = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
substrate-frame-rpc-system = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

[features]
default = []
runtime-benchmarks = ['thc-runtime/runtime-benchmarks']
