[package]
name = 'thc-node'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
build = 'build.rs'

[[bin]]
name = 'thc-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }


[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'
rand = "0.7.2"
serde = { version = "1.0.126", features = ["derive"] }
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = [ 'derive' ] }
futures = "0.3.16"
tempfile = "3.1.0"
hex-literal = "0.3.3"

node-executor = { version = '3.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

thc-runtime = { version = '4.0.0-dev', path = '../runtime' }
node-primitives = { version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
node-inspect = { version = '0.9.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

# FRAME

frame-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
frame-benchmarking-cli = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
frame-system = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
frame-system-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
substrate-frame-rpc-system = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

# PALLETS

pallet-im-online = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
pallet-contracts-rpc = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
pallet-transaction-payment-rpc = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
pallet-transaction-payment = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

# CORE
sc-authority-discovery = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-basic-authorship = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-cli = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', features = ['wasmtime'] }
sc-client-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-chain-spec = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-aura = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-babe = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-babe-rpc = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-epochs = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-slots = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-consensus-uncles = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-executor = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', features = ['wasmtime'] }
sc-finality-grandpa = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-finality-grandpa-rpc = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-keystore = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-network = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-rpc = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-rpc-api = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-service = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', features = ['wasmtime'] }
sc-sync-state-rpc = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-telemetry = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-transaction-pool = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-transaction-pool-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sc-service-test = { version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

# PRIMITIVES

sp-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-authorship = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-authority-discovery = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-block-builder = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-blockchain = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-consensus = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-consensus-aura = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-consensus-babe = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-core = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-inherents = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-finality-grandpa = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-keyring = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-keystore = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-runtime = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-timestamp = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-tracing = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }
sp-transaction-storage-proof = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest' }

[features]
default = []
runtime-benchmarks = ['thc-runtime/runtime-benchmarks']
