[package]
name = 'thc-runtime'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '5.0.0-dev'}

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = [ 'derive' ] }
hex-literal = { version = '0.3.1', optional = true }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

# FRAME

frame-benchmarking = { version  = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false, optional = true }
frame-election-provider-support = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
frame-executive = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
frame-support = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
frame-system = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
frame-system-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }

# Pallets

pallet-template = { version = '4.0.0-dev', path = '../pallets/template', default-features = false }

pallet-assets = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-authorship = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-authority-discovery = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-aura = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-babe = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-bags-list = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-balances = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-bounties = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-contracts = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-contracts-primitives = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-contracts-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-democracy = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-collective = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-election-provider-multi-phase = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-grandpa = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-im-online = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-identity = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-indices = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-membership = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-nicks = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-offences = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-randomness-collective-flip = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-sudo = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-treasury = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-timestamp = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-transaction-payment = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-session = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false, features = [ "historical" ] }
pallet-scheduler = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-staking = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-staking-reward-curve = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-proxy = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
pallet-vesting = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }

# PRIMITIVES

node-primitives = { version = '1.0.0', path = '../primitives', default-features = false }
sp-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-authority-discovery = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-block-builder = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-consensus-aura = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-consensus-babe = { version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-staking = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-npos-elections = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-core = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-inherents = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-io = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-offchain = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-runtime = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-session = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-std = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-transaction-pool = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }
sp-version = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-assets/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-bounties/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-contracts/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
    'pallet-indices/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-vesting/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-election-provider-support/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'node-primitives/std',
    'pallet-assets/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-aura/std',
    'pallet-babe/std',
    'pallet-bags-list/std',
    'pallet-balances/std',
    'pallet-bounties/std',
    'pallet-collective/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-democracy/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-identity/std',
    'pallet-indices/std',
    'pallet-membership/std',
    'pallet-nicks/std',
    'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-treasury/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-session/std',
    'pallet-scheduler/std',
    'pallet-staking/std',
    'pallet-proxy/std',
    'pallet-vesting/std',
    'sp-api/std',
    "sp-authority-discovery/std",
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-consensus-babe/std',
    'sp-staking/std',
    'sp-npos-elections/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
